# jj

./: .gitignore  .markdownlint.json  .markdownlint.jsonc  .marks.toml  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  GOVERNANCE.md  INTENT.md  MARKO_MAP.md  PLAN.md  README.md  clippy.toml  copr.spec  default.nix  flake.nix  mise.toml  mkdocs.yml  package.nix  pyproject.toml  versions.json
.cargo/: config-ci.toml  config.toml
.claude/: settings.local.json
.config/: mise.toml  nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: docs-build-deploy
.github/workflows/: binaries.yml  build-nix.yml  build.yml  ci.yml  codespell.yml  docs.yml  flakehub-publish-tagged.yml  netlify-docs.yml  pr.yml  release.yml  review.yml  sami-build.yml  scorecards.yml
cli/: Cargo.toml  build.rs
cli/src/: cleanup_guard.rs  cli_util.rs  color_formatter.rs  command_error.rs  commit_ref_list.rs  commit_templater.rs  complete.rs  config-schema.json  config.rs  description_util.rs  diff_util.rs  formatter.rs  gc_util.rs  generic_templater.rs  gerrit_util.rs  git_util.rs  graphlog.rs  hooks.rs  lib.rs  main.rs  movement_util.rs  operation_templater.rs  progress.rs  repo_managed_config.rs  revset_util.rs  source_symbol.rs  status_util.rs  template.pest  template_builder.rs  template_parser.rs  templater.rs  text_util.rs  time_util.rs  tui_util.rs  ui.rs  workspace_loader_table.rs
cli/testing/: fake-bisector.rs  fake-diff-editor.rs  fake-editor.rs  fake-formatter.rs
cli/tests/: cli-reference@.md.snap  datatest_config_schema.rs  runner.rs  test_abandon_command.rs  test_absorb_command.rs  test_acls.rs  test_advance_bookmarks.rs  test_alias.rs  test_arrange_command.rs  test_backout_command.rs  (+99 more)
demos/: demo_juggle_conflicts.sh  demo_operation_log.sh  demo_resolve_conflicts.sh  demo_working_copy.sh
docs/: FAQ.md  bookmarks.md  changelog.md  cli-reference.md  code-of-conduct.md  community_tools.md  config.md  config.toml  conflicts.md  contributing.md  contributing.mdx  core_tenets.md  deprecation.md  design_doc_blueprint.md  design_docs.md  filesets.md  gerrit.md  git-command-table.md  git-command-table.yml  git-comparison.md  git-compatibility.md  git-experts.md  github.md  glossary.md  index.md  install-and-setup.md  install-and-setup.mdx  operation-log.md  paid_contributors.md  related-work.md  releasing.md  revset-config.md  revsets.md  roadmap.md  sapling-comparison.md  style_guide.md  template-config.md  templates.md  testimonials.md  tutorial.md  (+2 more)
lib/: Cargo.toml
lib/benches/: revset_graph_bench.rs
lib/core/: Cargo.toml
lib/core/src/: backend.rs  content_hash.rs  fileset_parser.rs  matchers.rs  object_id.rs  repo_path.rs  revset_parser.rs  signing.rs
lib/gen-protos/: Cargo.toml
lib/gen-protos/src/: main.rs
lib/proc-macros/src/: content_hash.rs  lib.rs
lib/proc-macros/tests/: test_hygiene.rs
lib/revset-parser/: Cargo.toml
lib/revset-parser/src/: fmt.rs  lib.rs  parser.rs  ref_name.rs
lib/src/: absorb.rs  annotate.rs  backend.rs  bisect.rs  cancellation.rs  command_config.rs  commit.rs  commit_builder.rs  config.rs  config_resolver.rs  conflict_labels.rs  conflicts.rs  content_hash.rs  converge.rs  copies.rs  dag_walk.rs  dag_walk_async.rs  default_backend_factories.rs  default_submodule_store.rs  diff.rs  dsl_util.rs  eol.rs  evolution.rs  file_util.rs  files.rs  fileset.pest  fileset.rs  fileset_parser.rs  filter.rs  fix.rs  fix.rs~  footer.rs  formatter.rs  fsmonitor.rs  gc.rs  git.rs  git_backend.rs  git_local.rs  git_subprocess.rs  gitattributes.rs  (+55 more)
lib/src/config/: misc.toml
lib/src/default_index/: bit_set.rs  changed_path.rs  composite.rs  mod.rs  mutable.rs  readonly.rs  rev_walk.rs  rev_walk_queue.rs  revset_engine.rs  revset_graph_iterator.rs  store.rs
lib/src/diff_presentation/: mod.rs  unified.rs
lib/src/local_working_copy/: eol.rs
lib/src/local_working_copy/eol/: read.rs  write.rs
lib/src/lock/: backoff.rs  fallback.rs  mod.rs  unix.rs  wasi.rs  windows.rs
lib/src/protos/: git_store.proto  git_store.rs  local_working_copy.proto  local_working_copy.rs  mod.rs  op_store.proto  op_store.rs  secure_config.proto  secure_config.rs  simple_op_store.proto  simple_op_store.rs  simple_store.proto  simple_store.rs  user_config.proto  user_config.rs  working_copy.proto  working_copy.rs  workspace_store.proto  workspace_store.rs
lib/testing/: fake-filter.rs
lib/tests/: runner.rs  test_annotate.rs  test_bad_locking.rs  test_bisect.rs  test_cancellation.rs  test_commit_builder.rs  test_commit_concurrent.rs  test_conflicts.rs  test_converge.rs  test_default_revset_graph_iterator.rs  test_eol.rs  test_evolution_predecessors.rs  test_executable_bit.rs  test_fix.rs  test_fix.rs~  test_git.rs  test_git_backend.rs  test_gitattributes.rs  test_gpg.rs  test_id_prefix.rs  test_index.rs  test_init.rs  test_load_repo.rs  test_local_working_copy.rs  test_local_working_copy_concurrent.rs  test_local_working_copy_executable_bit.rs  test_local_working_copy_sparse.rs  test_merge_operations.rs  test_merge_trees.rs  test_merged_tree.rs  test_mut_repo.rs  test_operations.rs  test_refs.rs  test_revset.rs  test_revset_optimized.rs  test_rewrite.rs  test_rewrite_duplicate.rs  test_rewrite_transform.rs  test_signing.rs  test_ssh_signing.rs  (+3 more)
lib/testutils/: Cargo.toml
lib/testutils/src/: git.rs  lib.rs  proptest.rs  test_backend.rs
marko-bank/: README.md  jj-command-surface.txt  jj-entry.txt  jj-git-flow.txt  jj-query-flow.txt  jj-repo-transaction-flow.txt  jj-reusable-bank.txt  jj-working-copy-flow.txt  source-function-index.txt
prerelease/: 404.html  config-schema.json  index.html  sitemap.xml
scm-record/scm-diff-editor/: Cargo.toml
scm-record/scm-record/: Cargo.toml
starlight/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
v0.35.0/: 404.html  index.html
v0.36.0/: 404.html  index.html
v0.37.0/: 404.html  index.html
v0.38.0/: 404.html  index.html
v0.39.0/: 404.html  index.html
v0.41.0/: 404.html
v0.42.0/: index.html  sitemap.xml
v0.43.0/: git-command-table.yml  sitemap.xml
(+2722 files in other folders)
