[package]
name = "gen-protos"
description = "Generate Protocol Buffers definitions for the jj-lib crate"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
camino = { workspace = true }
prost-build = { workspace = true }

[lints]
workspace = true
