[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-diff-editor"
repository = "https://github.com/arxanas/scm-record"
version.workspace = true

# Keep in sync with `scm-record/Cargo.toml`.
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
diffy.workspace = true
scm-record.workspace = true
sha1.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
insta.workspace = true
maplit.workspace = true
